--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "off", // Checks effect dependencies
     "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
     "simple-import-sort/imports": "error", // import 정렬
     "simple-import-sort/exports": "error", // export 정렬
     "import/no-unresolved": "off",
