--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
