--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
