--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.1",
+    "@react-google-maps/api": "^2.18.1",
+    "axios": "^1.4.0",
+    "google-map-react": "^2.2.1",
+    "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
